[package]
name = "dataloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dataloader"
crate-type = ["cdylib"]

[dependencies]
memmap = "0.7.0"
numpy = "0.18.0"
pyo3 = { version = "0.18.0", features = ["extension-module"] }
