[package]
name = "dataloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "dataloader"
crate-type = ["cdylib", "staticlib"]

[features]
default = ["py", "go"]
py = ["dep:numpy", "dep:pyo3"]
go = ["dep:libc"]

[dependencies]
memmap = "0.7.0"
ndarray = "0.15.6"
pyo3 = { version = "0.18.0", features = ["extension-module"], optional = true }
numpy = { version = "0.18.0", optional = true }
libc = { version = "0.2.2", optional = true }